changed dotnet because who the hell uses dotnet framework go kys

--- a/GitHubServer.Output/GitHubServer.Output.csproj
+++ b/GitHubServer.Output/GitHubServer.Output.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GitHubServer\GitHubServer.csproj" />
+    <ProjectReference Include="..\GitHubServer1\GitHubServer.csproj" />
   </ItemGroup>
 
 </Project>
